fix for titles on Safari (disps page and single)

--- a/style.less
+++ b/style.less
@@ -546,7 +546,6 @@ textarea.message_text {
 .disp_single {
 	.evo_post_title h1 {
 		font-weight: 700;
-		display: table-cell;
 		margin: 0;
 		padding: 25px 0;
 		font-size: 46px;
